update: new README and fixed minecraft:beach being the whole world